@@ -41,12 +41,12 @@ namespace FFmpegSharp.Interop.AVIO
         public IntPtr priv_data;
 
 #pragma warning disable 649
-        private byte* filename_ptr; /** specified filename */
+        private sbyte* filename_ptr; /** specified filename */
 #pragma warning restore 649
 
         public string filename
         {
-            get { return Utils.GetString(filename_ptr); }
+            get { return new string((sbyte*)filename_ptr); }
         }
     }
 }
