@@ -37,11 +37,11 @@ namespace FFmpegSharp.Interop.AVIO
     public unsafe struct URLProtocol
     {
 #pragma warning disable 649
-        private byte* name_ptr;
+        private sbyte* name_ptr;
 #pragma warning restore 649
         public string name
         {
-            get { return Utils.GetString(name_ptr); }
+            get { return new string(name_ptr); }
         }
 
         private IntPtr open_ptr;
